@@ -1,3 +1,5 @@
+DIST libbluray-0.0.1_pre20101214.tar.xz 176220 RMD160 aca0056ee641fc2f1c17b0e1401f8e202646167f SHA1 c0521a4c5232e5c1bd9c962c2a5635fc25927976 SHA256 d30d818a6c26b5fbea10b56614aa4841988fe521a53ce1fde05851c66cca2b4e
+EBUILD libbluray-0.0.1_pre20101214.ebuild 1217 RMD160 462f6b4f82f175f96de86159349cf57234ff4566 SHA1 1ea4afee8fffb9f5f1d4399b616367b3b14924d7 SHA256 cc7280cc377e76c51b24234e678369dee3036dcfd7a1ca3790f9e1a8415b60c4
 EBUILD libbluray-9999.ebuild 1201 RMD160 7d69e43a8155f5ac1f03cf1f69d2a7dcb7971680 SHA1 9c5b2b2bc40b34b0392a03ac4923a54dc0143844 SHA256 cbef1c1187767f8d63a4e6ed7e88154112b76d7e0e06ab3134a7245b3b327e74
-MISC ChangeLog 396 RMD160 41e5fa2ea570e4fd01701f6495416fdd09e55f17 SHA1 5311abdd8b9967d52fcafd515c3b319bf42e9b7c SHA256 32c2e4823513e72278fc6ef55370248ddac2786c9601efe4c1620a4ceed2df07
+MISC ChangeLog 538 RMD160 b6c1b5852f01afea5d8c3046dc221943cf8006f4 SHA1 be77f47c1bcac06230633fa68e30d537c7bea7a1 SHA256 3f0c8bd561ae3ace142d987fbdb19ed1e48b43af662a1bc5eff93713f3760996
 MISC metadata.xml 377 RMD160 d2708b9ae6b4f6e6ba0ad23bbe9d6c0012afd237 SHA1 6f9903dc8d2a9153e0c7c0cb6df2e4a01f107b71 SHA256 600848960051b74faed8e1ca8091858ea357bf9500ef967fc00ed287425c83b3
