@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*libbluray-0.0.1_pre20101214 (14 Dec 2010)
+
+  14 Dec 2010; Nikoli <nikoli@lavabit.com>
+  +libbluray-0.0.1_pre20101214.ebuild:
+  add snapshot
+
   14 Dec 2010; Nikoli <nikoli@lavabit.com> libbluray-9999.ebuild,
   metadata.xml:
   fix java USE, src_install, add utils USE
